# mazaryn

./: .dockerignore  .env  .formatter.exs  .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  file.BCK  fly.toml  mix.exs  package-lock.json  psuedo.md  quick_test.exs  run.sh  sitemap.xml
.github/workflows/: build.yml  build_and_deploy_or_restore.yml  ci.yml  deploy.yml  main.yml
Mnesia/: user.DCD
assets/: package-lock.json  package.json  tailwind.config.js
assets/css/: app.css  livestream_styles.css  notebook_styles.css  video_styles.css
assets/js/: app.js  video_call.js
assets/js/hooks/: camera_manager.js  livestream_hooks.js  my_streams_hook.js  notebook_hooks.js  video_hooks.js
config/: config.exs  dev.exs  prod.exs  releases.exs  runtime.exs  test.exs
lib/: mazaryn.ex  mazaryn_web.ex
lib/mailer/: .gitignore  README.md  mix.exs
lib/mailer/lib/: mailer.ex
lib/mailer/test/: mailer_test.exs
lib/mazaryn/: application.ex  cache.ex  chats.ex  comment.ex  comments.ex  event.ex  groups.ex  hashtag_indexer.ex  id_helper.ex  kernel_diagnostic.ex  mailer.ex  post.ex  posts.ex  release.ex  repo.ex  search.ex  solana_wallets.ex  translator.ex  users.ex  video_call_test.exs  video_call_test_helper.exs
lib/mazaryn/account/: ai_user.ex  business.ex  businesses.ex  invitation.ex  jobs.ex  resume.ex  user.ex  user_notifier.ex  user_resolver.ex  user_token.ex  users.ex
lib/mazaryn/api/: blog_api.ex  media_api.ex
lib/mazaryn/chats/: chat.ex  chat_test.ex  chatgpt.ex
lib/mazaryn/comment/: comment.ex
lib/mazaryn/core/: ads_client.ex  blog_client.ex  business_client.ex  chat_client.ex  chatgpt.ex  competition_client.ex  competition_clinet.ex  context_near_wallet.ex  dataset_client.ex  download_manager_client.ex  event_client.ex  group_client.ex  job_client.ex  media_client.ex  model_client.ex  near_wallet_client.ex  notebook_client.ex  notif_client.ex  notif_event.ex  post_client.ex  repost_client.ex  resume_client.ex  solana_wallet_client.ex  user_client.ex  utils.ex
lib/mazaryn/dashboard/: wallet.ex
lib/mazaryn/data_abstractor/: data_abstractor.ex
lib/mazaryn/emoji/: emoji.ex
lib/mazaryn/home/: comment.ex  comment_like.ex  follow.ex  like.ex  notification.ex  post.ex
lib/mazaryn/learning/: certificate_generator.ex
lib/mazaryn/login/: form.ex
lib/mazaryn/mail/: html.ex  user_email.ex
lib/mazaryn/manage/: manage_post.ex  manage_user.ex
lib/mazaryn/ml/: tensor.ex
lib/mazaryn/p2p/: node.ex
lib/mazaryn/post/: post.ex  post_resolver.ex
lib/mazaryn/resolvers/: post_resolver.ex  user_resolver.ex  wallet_resolver.ex
lib/mazaryn/rustcode/: rustcode.ex
lib/mazaryn/schema/: ads.ex  ai_post.ex  blog_post.ex  comment.ex  competition.ex  dataset.ex  group.ex  group_admin.ex  group_invite.ex  group_member.ex  group_message.ex  leaderboard.ex  learning.ex  livestream.ex  media.ex  model.ex  music.ex  near_access_key.ex  near_implicit_account.ex  near_social_post.ex  (+18 more)
lib/mazaryn_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
native/rustcode/: Cargo.toml  README.md
native/rustcode/wallet/: Cargo.toml
native/rustcode/wallet/src/: crypto.rs  error.rs
native/rustcode/wallet/src/models/: mod.rs  transaction.rs  wallet.rs
priv/gettext/: careers.pot  contact.pot  default.pot  main.pot
priv/repo/: seeds.exs
priv/static/: cache_manifest.json
rel/: env.bat.eex  env.sh.eex
rel/overlays/: mazaryn.service
src/golangcode/: go.mod  http_apis.go  ipfs_handlers.go  libp2p_handlers.go  main.go
src/jscode/: package.json
src/juliacode/: Manifest.toml  Project.toml
src/otpcode/: README.md  otpcode_sup.erl  rebar.config
src/otpcode/src/nif/e2ee/: CMakeLists.txt  e2ee.cpp  e2ee.erl  records.hrl
src/otpcode/src/nif/opencv/: CMakeLists.txt  main.cpp  records.hrl
src/otpcode/src/nif/opencv/feature/: CMakeLists.txt  corner_eigen.cpp  corner_eigen.erl  corner_harris.cpp  corner_harris.erl
src/otpcode/src/nif/opencv/filtering/: CMakeLists.txt  bilateral.cpp  bilateral.erl  blur.cpp  blur.erl  box_filter.cpp  box_filter.erl  build_pyramid.cpp  build_pyramid.erl  dilate.cpp  dilate.erl
src/otpcode/src/nif/opencv/histograms/: CMakeLists.txt  calc_back_project.cpp  calc_back_project.erl
src/otpcode/src/nif/opencv/segmentation/: CMakeLists.txt  grabcut.cpp  grabcut.erl  watershed.cpp  watershed.erl
src/otpcode/src/nif/p2p/: CMakeLists.txt  file_nif.cpp  file_nif.erl  file_nif.h  hash_nif.cpp  hash_nif.erl  hash_nif.h  records.hrl  utils_nif.cpp  utils_nif.erl  utils_nif.h  uuid_nif.cpp  uuid_nif.erl  uuid_nif.h
src/otpcode/src/nif/post/: CMakeLists.txt  device.cpp  device.erl  records.hrl
src/otpcode/src/nif/quantum/: CMakeCache.txt  CMakeLists.txt  Makefile  chat_dense_coding.cpp  chat_dense_coding.erl  cmake_install.cmake  entanglement.cpp  entanglement.erl  grover.cpp  grover.erl  qft.cpp  qft.erl  qpe.cpp  qpe.erl  randomness.cpp  randomness.erl  records.hrl  teleport_qubit.cpp  teleport_qubit.erl  teleport_qudit.cpp  teleport_qudit.erl
src/otpcode/src/nif/tensorflow/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  print_string.cpp  print_string.erl  print_string2.cpp  print_string2.erl  records.hrl
src/otpcode/src/nif/test/: CMakeLists.txt  print_string.cpp  print_string.erl  records.hrl
src/pycode/: parquet_dataset.py  parquet_test.py  py_server.py  requirements.txt  text_classification.py  text_classification_v2.py  tf_test.py  train_parquet.py
src/rustcode/: Cargo.toml
src/rustcode/src/: api.rs  main.rs  sfu.rs  signaling.rs  webrtc.rs
src/rustcode/src/download_manager/: api.rs  chunk.rs  error.rs  manager.rs  mod.rs  progress.rs  queue.rs  storage.rs  types.rs
src/rustcode/src/media_video/: analytics.rs  api.rs  health.rs  metrics.rs  mod.rs  player.rs  storage.rs  streaming.rs  transcoding.rs  types.rs  websocket.rs
src/rustcode/src/notebook/: api.rs  kernel.rs  mod.rs  types.rs  websocket.rs
src/tscode/: .env.example  package.json  tsconfig.json
test/: test_helper.exs
test/mazaryn/: chats_test.exs  posts_test.exs
test/support/: conn_case.ex  data_case.ex
(+852 files in other folders)
